added a cat image and a few more changes

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a pragraph element. Cool huh?</p>
-<a href="https://goolge.com" target="_blank" title="Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Testpage</title>/title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a <b>pragraph</b> element. Cool huh?</p>
+	<a href="https://goolge.com" target="_blank" title="Google">Click me! I'm a link!</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg">
+</body>
+</html>
